# MyDistortion

./: CMakeLists.txt
resource/: Info.plist  myplugineditor.uidesc
source/: constants.h  myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h  version.h  waveshaper.cpp
